fixing spacing issue

--- a/src/styles/partials/_iconstyles.scss
+++ b/src/styles/partials/_iconstyles.scss
@@ -937,6 +937,19 @@ top:0;
 }
 
 
+.bg-black{
+
+    #qp1,
+    #qp2,
+    #qp3{
+    display: none;
+    }
+
+}
+
+
+
+
 #csp-1,
 #csp-2,
 #csp-3,
