--- a/src/styles/partials/_manufacturing.scss
+++ b/src/styles/partials/_manufacturing.scss
@@ -327,6 +327,9 @@ margin: 10px;
 
 }
 
+.learn-more-down-container{
+
+
 .white-link{
     font-weight: 400;
     font-size: 2em;
@@ -334,13 +337,18 @@ margin: 10px;
     border-bottom: 0px solid transparent;
     line-height: 48px;
 
+
+}
+
+
 &:hover{
-
+cursor: pointer;
 #learn-more-down{
-	top: -18px;
+    top: -18px;
 }
 
 }
+
 
 }
 
@@ -853,3 +861,16 @@ width: 100%;
 
 
 }
+
+
+
+    .st7{
+
+                        font-family: $segoe--semi;
+                font-weight: $semi-bold;
+
+
+
+}
+
+
