--- a/src/styles/partials/_mobilemanufacturing.scss
+++ b/src/styles/partials/_mobilemanufacturing.scss
@@ -200,7 +200,20 @@ padding-right: 15px;
 #qp1,
 #qp2,
 #qp3{
-display: none;
+    display: none;
+}
+
+.bg-black{
+
+    #qp1,
+    #qp2,
+    #qp3{
+    display: block;
+    width: 20%;
+    left: initial;
+        right: 0;
+    }
+
 }
 
 
@@ -255,11 +268,17 @@ margin-bottom: 15px;
 
 .section-pad{
     padding-top: 60px;
-    padding-bottom: 60px;
+    // padding-bottom: 60px;
+    padding-bottom: 200px;
 }
 
 .pb-30{
     padding-bottom: 20px;
+}
+
+.section-pad-md {
+    padding-top: 40px;
+    padding-bottom: 80px;
 }
 
 }
